fix: resolve compilation error in relwithdebinfo mode
Signed-off-by: Tghoul-xlx <xujiale10@huawei.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -269,7 +269,7 @@ else()
     list(APPEND FRONTEND_SRC_OBJECTS $<TARGET_OBJECTS:CangjieCHIRExtra>)
 endif()
 add_library(cangjie-lsp ${FRONTEND_SRC_OBJECTS})
-if(MINGW AND CMAKE_BUILD_TYPE MATCHES "^(Debug|RelWithDebInfo|MinSizeRelWithDebInfo)$")
+if(MINGW AND CMAKE_BUILD_TYPE MATCHES Debug)
     set(WIN_DEBUG_USE_STATIC_LIB ON)
 endif()
 if(NOT WIN_DEBUG_USE_STATIC_LIB)
