fix: fix gtest warning
Signed-off-by: jinbohang <jinbohang1@huawei.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,9 +371,11 @@ if(CANGJIE_BUILD_CJC)
     add_subdirectory(utils)
 endif()
 
-find_package(GTest)
-if(NOT GTest_FOUND)
-    message(WARNING "GTest is not found. Unittests are disabled.")
+if (CANGJIE_BUILD_TESTS)
+    find_package(GTest)
+    if(NOT GTest_FOUND)
+        message(WARNING "GTest is not found. Unittests are disabled.")
+    endif()
 endif()
 
 if(CANGJIE_BUILD_CJC AND CANGJIE_BUILD_TESTS AND GTest_FOUND)
